--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-335.4KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.17MB/s(Youtube:不良林), server: 120.233.186.59, port: 3382, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.88MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.01MB/s(Youtube:不良林), server: 120.233.186.204, port: 3382, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.93MB/s(Youtube:不良林), server: xr-5.herokuapp.com, port: 443, type: vmess, uuid: 17af76e1-a5d7-41ab-ae87-b48f185075d1, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /17af76e1-a5d7-41ab-ae87-b48f185075d1-vmess, ws-headers: {Host: xr-5.herokuapp.com}}
-  - {name: 未知国家-378.6KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
-  - {name: 🇺🇸 美国-1.84MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: 8e7954c4-e4e8-11ec-9540-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
-  - {name: 🇨🇳 中国-321.3KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-2.91MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.36MB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.62MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.10MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.21MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.18MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇭🇰 香港-725.1KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-10.94MB/s(Youtube:不良林), server: 120.233.186.71, port: 3382, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-11.89MB/s(Youtube:不良林), server: 120.233.186.71, port: 3382, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.81MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
-      - 未知国家-378.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-725.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
-      - 未知国家-378.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-725.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
-      - 未知国家-378.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-725.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-725.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
-      - 未知国家-378.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-725.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
-      - 未知国家-378.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-725.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
-      - 未知国家-378.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-725.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-335.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.93MB/s(Youtube:不良林)
-      - 未知国家-378.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-725.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
