--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-9.36MB/s(Youtube:不良林), server: 120.233.186.250, port: 3382, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.89MB/s(Youtube:不良林), server: 120.233.186.71, port: 3382, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-229.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-11.17MB/s(Youtube:不良林), server: 120.233.186.59, port: 3382, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-291.9KB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
-  - {name: 🇺🇸 美国-2.09MB/s(Youtube:不良林), server: xjp.ziqiyun.xyz, port: 443, type: trojan, password: 7b561e94-42f3-4f92-979c-4cf97c328025, sni: xjp.ziqiyun.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.33MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇳 中国-532.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-8.03MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.65MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.38MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.28MB/s(Youtube:不良林), server: 120.233.186.59, port: 3382, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-426.9KB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.69MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-375.5KB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.12MB/s(Youtube:不良林), server: 152.89.210.105, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-426.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-426.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-426.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-426.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-426.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-426.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-532.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-426.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-375.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.58MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
